[新增]音频列表

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="charge_service">charge_service</string>
     <string name="charge_is_audio">charge_is_audio</string>
     <string name="charge_ho_bias">charge_ho_bias</string>
+    <string name="charge_sounds">charge_sounds</string>
 </resources>
