--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="charge_is_audio">charge_is_audio</string>
     <string name="charge_ho_bias">charge_ho_bias</string>
     <string name="charge_sounds">charge_sounds</string>
+    <string name="charge_click_close">charge_click_close</string>
 </resources>
