--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="charge_sounds">charge_sounds</string>
     <string name="charge_screen_on_open">charge_screen_on_open</string>
     <string name="charge_click_close">charge_click_close</string>
+    <string name="charge_keep_show">charge_keep_show</string>
 </resources>
