[新增]勿扰模式，可选在全屏状态下不弹出鲨鲨酱

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="charge_keep_show">charge_keep_show</string>
     <string name="charge_boot_start">charge_boot_start</string>
     <string name="is_clear_recent">is_clear_recent</string>
+    <string name="is_not_open_on_full">is_not_open_on_full</string>
 </resources>
