--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="charge_boot_start">charge_boot_start</string>
     <string name="is_clear_recent">is_clear_recent</string>
     <string name="is_not_open_on_full">is_not_open_on_full</string>
+
+    <string name="audio_flags">audio_flags</string>
 </resources>
