--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="is_not_open_on_full">is_not_open_on_full</string>
 
     <string name="audio_flags">audio_flags</string>
+    <string name="b_video_url">https://b23.tv/BV1iA41157NL</string>
 </resources>
