--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,16 @@
 
     <string name="audio_flags">audio_flags</string>
     <string name="b_video_url">https://b23.tv/BV1iA41157NL</string>
+
+    <string name="audio_setting_help">
+        目前音频支持在五种状态下播放\n
+        分别是：\n
+        1.低电量:0-20%电量\n
+        2.中电量:21-70%电量\n
+        3.高电量:71-99%电量\n
+        4.充满:100%(充满后会一直播放语音，应该没人想要充满了还一直插着吧..？)\n
+        5.拔出\n
+        点击音频可以弹出相应菜单，添加不同状态的Flag可以让它在不同状态下被播放，且一个音频支持设置多个Flag。\n
+        当已有Flag时重复设置则清除该Flag
+    </string>
 </resources>
