[优化]链接换成长链接以支持直接调用APP打开视频

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="is_not_open_on_full">is_not_open_on_full</string>
 
     <string name="audio_flags">audio_flags</string>
-    <string name="b_video_url">https://b23.tv/BV1iA41157NL</string>
+    <string name="b_video_url">https://www.bilibili.com/video/BV1iA41157NL</string>
 
     <string name="audio_setting_help">
         目前音频支持在五种状态下播放\n
