[优化]音频设置帮助文案

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,9 @@
         3.高电量:71-99%电量\n
         4.充满:100%(充满后会一直播放语音，应该没人想要充满了还一直插着吧..？)\n
         5.拔出\n
-        点击音频可以弹出相应菜单，添加不同状态的Flag可以让它在不同状态下被播放，且一个音频支持设置多个Flag。\n
-        当已有Flag时重复设置则清除该Flag
+        其他提示:\n
+        1.点击音频可以弹出相应菜单，添加不同状态的Flag可以让它在不同状态下被播放。\n
+        2.一个音频支持设置多个Flag，一个状态存在多个音频则随机抽取一个播放。\n
+        3.当已有Flag时重复设置则清除该Flag\n
     </string>
 </resources>
