[新增]权限申请弹窗

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <string name="audio_flags">audio_flags</string>
     <string name="b_video_url">https://www.bilibili.com/video/BV1iA41157NL</string>
+    <string name="start_use_text">开始使用</string>
 
     <string name="audio_setting_help">
         目前音频支持在五种状态下播放\n
@@ -27,5 +28,8 @@
         1.点击音频可以弹出相应菜单，添加不同状态的Flag可以让它在不同状态下被播放。\n
         2.一个音频支持设置多个Flag，一个状态存在多个音频则随机抽取一个播放。\n
         3.当已有Flag时重复设置则清除该Flag\n
+    </string>
+    <string name="per_desc">
+        以上两个需要手动授权的权限在不同系统上有不同表示。如果在运行过程中发现不能非应用或锁屏界面显示很可能就是系统上有特殊权限限制了，需要自行找到对应权限授权。
     </string>
 </resources>
