[优化]权限申请文案

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,6 @@
         3.当已有Flag时重复设置则清除该Flag\n
     </string>
     <string name="per_desc">
-        以上两个需要手动授权的权限在不同系统上有不同表示。如果在运行过程中发现不能非应用或锁屏界面显示很可能就是系统上有特殊权限限制了，需要自行找到对应权限授权。
+        以上需要自行授权的权限在不同系统上有不同表示。如果在运行过程中发现不能非应用或锁屏界面显示很可能就是系统上有特殊权限限制了，需要自行找到对应权限授权。
     </string>
 </resources>
