--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="is_not_open_on_full">is_not_open_on_full</string>
 
     <string name="audio_flags">audio_flags</string>
-    <string name="b_video_url">https://www.bilibili.com/video/BV1iA41157NL</string>
+    <string name="b_video_url">https://www.bilibili.com/video/BV1uX4y137TS</string>
     <string name="start_use_text">开始使用</string>
 
     <string name="audio_setting_help">
