[新增]可选是否以前台服务方式启动充电守护

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">鲨鲨酱.jpg</string>
     <string name="charge_task">charge_task</string>
     <string name="charge_service">charge_service</string>
+    <string name="charge_foreground_service">charge_foreground_service</string>
     <string name="charge_is_audio">charge_is_audio</string>
     <string name="charge_ho_bias">charge_ho_bias</string>
     <string name="charge_sounds">charge_sounds</string>
