--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
 
     <string name="audio_flags">audio_flags</string>
     <string name="b_url">https://space.bilibili.com/12845795</string>
+    <string name="github_url">https://github.com/RyensX/ChargingWorkshop</string>
     <string name="start_use_text">开始使用</string>
     <string name="sound_list">音频列表</string>
 
